Fix overlapping of leaflet labels

--- a/rando/static/css/objects/maps.less
+++ b/rando/static/css/objects/maps.less
@@ -53,6 +53,9 @@
   &:-moz-full-screen { top: 0; }
   &:full-screen { top: 0; }
 
+  .leaflet-label {
+    z-index:1000 !important;
+  }
 
   .leaflet-marker-icon {
     &.trek-cluster, &.trek-icon {
